# nucleo-l476rg-rust

./: Cargo.toml  README.md  memory.x
src/: main.rs
