[package]
authors = ["Roman Khomenko <romankhomenko1995@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "nucleo-l476rg-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
# svd2rust = "0.33.3"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32l4]
features = ["stm32l4x6", "rt"]
version = "0.15.1"
# [features]
# rt = ["stm32l4/rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "nucleo-l476rg-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
